--- a/Spring/src/main/resources/templates/activity.html
+++ b/Spring/src/main/resources/templates/activity.html
@@ -1,48 +1,10 @@
-<!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>User Activities</title>
-
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
-
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
-
 <body>
 
-<main role="main" class="container">
-
-    <div th:switch="${user}">
-        <h2 th:case="null">No users yet!</h2>
-        <div th:case="*">
-            <h2>Users</h2>
-            <table>
-                <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Calories</th>
-                    <th>Activity</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="User : ${user}">
-                    <td th:text="${User.getDate()}"></td>
-                    <td th:text="${User.getCaloriesIdle()}"></td>
-<!--                    <td><a th:href="@{/update/{id}(id=${User.getId()})}">Edit</a></td>-->
-<!--                    <td><a th:href="@{/delete/{id}(id=${User.getId()})}">Delete</a></td>-->
-                    <td th:text="${User.getSummary()}"></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-</main>
-<!-- /.container -->
-
-<script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
 </body>
 </html>
