--- a/Spring/src/main/resources/templates/user.html
+++ b/Spring/src/main/resources/templates/user.html
@@ -1,5 +1,45 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>User Activities</title>
+
+    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.2.1/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/main.css}"/>
+
+</head>
+
+<body>
+
+<main role="main" class="container">
+
+    <div th:switch="${user}">
+        <h2 th:case="null">No users yet!</h2>
+        <div th:case="*">
+            <h2>Users</h2>
+            <table>
+                <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Calories</th>
+                    <th>Activity</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="User : ${user}">
+                    <td th:text="${User.getDate()}"></td>
+                    <td th:text="${User.getCaloriesIdle()}"></td>
+                    <td th:text="${User.getSummary()}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+</main>
+<!-- /.container -->
 
 <script type="text/javascript" th:src="@{webjars/bootstrap/4.2.1/js/bootstrap.min.js}"></script>
 </body>
